불필요한 코드 제거 및 readme update

--- a/build.gradle
+++ b/build.gradle
@@ -20,20 +20,6 @@ allprojects {
     version = '0.0.1-SNAPSHOT'
     sourceCompatibility = 11
 
-    task initSourceFolders {
-        sourceSets*.java.srcDirs*.each {
-            if( !it.exists() ) {
-                it.mkdirs()
-            }
-        }
-
-        sourceSets*.resources.srcDirs*.each {
-            if( !it.exists() ) {
-                it.mkdirs()
-            }
-        }
-    }
-
     repositories {
         mavenCentral()
     }
@@ -46,7 +32,8 @@ allprojects {
         runtimeOnly 'mysql:mysql-connector-java'
         annotationProcessor 'org.projectlombok:lombok'
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
-            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine' }
+            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        }
     }
 
     test {
