--- a/statistics/build.gradle
+++ b/statistics/build.gradle
@@ -6,6 +6,6 @@ bootJar {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    //implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
