--- a/statistics/src/main/resources/application.yml
+++ b/statistics/src/main/resources/application.yml
@@ -5,3 +5,7 @@ spring:
     url: jdbc:mysql://localhost:3306/statistics?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: 1234
+  profiles: dev
+
+server:
+  port: 8080
