--- a/statistics/build.gradle
+++ b/statistics/build.gradle
@@ -6,6 +6,7 @@ bootJar {
 }
 
 dependencies {
+    compile project(':module-batch')
     //implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
