module-commons 구현 및 statistics에서 DB 연동 셋팅

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'multiproject'
-include ':module-batch', ':statistics'
+include ':module-batch', ':statistics', ':module-commons'
