--- a/build.gradle
+++ b/build.gradle
@@ -49,10 +49,17 @@ repositories {
 dependencies {
     compile project(':module-batch')
     compile project(':statistics')
+    compile project(':module-commons')
+}
+
+project(':module-batch') {
+    dependencies {
+        compile project(':module-commons')
+    }
 }
 
 project(':statistics') {
     dependencies {
-        compile project(':module-batch')
+        compile project(':module-commons')
     }
 }
