--- a/module-batch/src/main/resources/application.yml
+++ b/module-batch/src/main/resources/application.yml
@@ -5,3 +5,6 @@ spring:
     url: jdbc:mysql://localhost:3306/statistics?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: 1234
+
+server:
+  port: 8081
