--- a/module-batch/build.gradle
+++ b/module-batch/build.gradle
@@ -6,6 +6,7 @@ bootJar {
 }
 
 dependencies {
+    compile project(':module-commons')
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     testImplementation 'org.springframework.batch:spring-batch-test'
 }
