--- a/statistics/src/main/resources/application.yml
+++ b/statistics/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
     username: root
     password: 1234
   profiles: dev
+  freemarker:
+    template-loader-path: classpath:/templates
+    suffix: .ftl
 
 server:
   port: 8080
