--- a/module-batch/build.gradle
+++ b/module-batch/build.gradle
@@ -9,5 +9,6 @@ dependencies {
     compile project(':module-commons')
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     testImplementation 'org.springframework.batch:spring-batch-test'
+    //implementation 'org.springframework.boot:spring-boot-starter-quartz'
 }
 
