--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'multiproject'
-include ':module-batch', ':statistics', ':module-commons'
+include ':module-batch', ':statistics', ':module-commons', ':module-batch-quartz'
